--- a/LibraryApp/Shared/Article.razor
+++ b/LibraryApp/Shared/Article.razor
@@ -1,16 +1,12 @@
 @using LibraryApp.Data.Models
+@using System.Globalization
 <div class="alert alert-secondary mt-4">
     <span class="oi oi-pencil me-2" aria-hidden="true"></span>
-    <strong>@Title</strong>
-
-    <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold link-dark" href="https://go.microsoft.com/fwlink/?linkid=2149017">brief survey</a>
-    </span>
-    and tell us what you think.
+    <strong>@Title.Article.Name</strong>
+    <span>@Title.Article.Released.ToString(CultureInfo.CurrentCulture)</span>
 </div>
 
 @code {
     [Parameter]
-    public MArticle<Book>? Title { get; set; }
+    public MArticle<Book> Title { get; set; }
 }
