--- a/LibraryApp/Pages/FetchData.razor
+++ b/LibraryApp/Pages/FetchData.razor
@@ -3,14 +3,14 @@
 <PageTitle>Weather forecast</PageTitle>
 
 @using MongoDB.Driver
-@using LibraryApp.Data
-@inject MongoClient DBService
+@using LibraryApp.Data.Models
+@inject MongoClient DBClient
 
-<h1>Weather forecast</h1>
+<h1>Výpis knih</h1>
 
-<p>This component demonstrates fetching data from a service.</p>
+<p>Přehled všech knih v naší knihovně.</p>
 
-@if (forecasts == null)
+@if (_books == null)
 {
     <p>
         <em>Loading...</em>
@@ -18,35 +18,18 @@
 }
 else
 {
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var forecast in forecasts)
-        {
-            <tr>
-                <td>@forecast.Date.ToShortDateString()</td>
-                <td>@forecast.TemperatureC</td>
-                <td>@forecast.TemperatureF</td>
-                <td>@forecast.Summary</td>
-            </tr>
-        }
-        </tbody>
-    </table>
+    <TileHolder Books=_books></TileHolder>
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+    private IEnumerable<Book>? _books;
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task<bool> OnInitializedAsync()
     {
-        //forecasts = await DBService.GetForecastAsync(DateTime.Now);
+        var db = DBClient.GetDatabase("library");
+        var col = db.GetCollection<Book>(nameof(Book));
+        _books = await col.FindAsync(x => true).Result.ToListAsync();
+        return true;
     }
 
 }
