--- a/LibraryApp/wwwroot/css/site.css
+++ b/LibraryApp/wwwroot/css/site.css
@@ -1,5 +1,7 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -14,8 +16,9 @@ a, .btn-link {
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    background-color: #1861ac;
+    border-radius: 10%;
+    width: fit-content;
 }
 
 .content {
