--- a/LibraryApp/Shared/Article.razor
+++ b/LibraryApp/Shared/Article.razor
@@ -1,24 +1,46 @@
 @using LibraryApp.Data.Models
 @using System.Globalization
-<div class="tile">
-    <div class="canvas">
-        <img src="https://via.placeholder.com/250" alt="placeholder"/>
+
+<div class="structural">
+    <div class="tile">
+        <div class="canvas">
+            <img src="https://via.placeholder.com/250" alt="placeholder"/>
+        </div>
+        <div class="info">
+            <div style="display: flex; flex-direction: row; justify-content: space-between">
+                <h3>@BookBind.Name</h3>
+                <button class="btn-primary info-switch" @onclick="SwitchInfo">
+                    <i class="material-icons">@(_showingClass.Contains("hidden") ? "arrow_circle_right" : "arrow_circle_left")</i>
+                </button>
+            </div>
+            <span>@BookBind.Released.Year.ToString()</span>
+            @foreach (var author in BookBind.Authors)
+            {
+                <span class="oi oi-pencil me-2" aria-hidden="true">@author</span>
+            }
+            <span>@BookBind.Description</span>
+        </div>
+        <div class="admin-bar admin-book">
+            <i class="material-symbols-outlined">visibility</i>
+            <i class="material-symbols-outlined">add</i>
+            <i class="material-symbols-outlined">remove</i>
+            <i class="material-symbols-outlined">delete</i>
+        </div>
     </div>
-    <div class="info">
+    <div class="@_showingClass">
         
-        <h3>@BookBind.Name</h3>
-        <span>@BookBind.Released.Year.ToString()</span>
-        @foreach (var author in BookBind.Authors)
-        {
-            <span class="oi oi-pencil me-2" aria-hidden="true">@author</span>
-        }
-        <span>@BookBind.Description</span>
     </div>
 </div>
 
 @code {
+    private const string InfoVisClass = "infographics visible";
+    private const string InfoHidClass = "infographics hidden";
 
     [Parameter]
     public Book BookBind { get; set; } = new Book();
+
+    private string _showingClass = "infographics hidden";
+
+    private void SwitchInfo() => _showingClass = _showingClass.Contains("hidden") ? InfoVisClass : InfoHidClass;
 
 }
