--- a/LibraryApp/Shared/Article.razor.css
+++ b/LibraryApp/Shared/Article.razor.css
@@ -1,9 +1,30 @@
+.structural {
+    display: flex;
+    flex-direction: row;
+    height: 30rem;
+    margin: 1em;
+    padding: 1em;
+}
+
+.infographics{
+    width: 30rem;
+    background-color: #06357a;
+}
+.infographics.hidden {
+    display: none;
+}
+
+.infographics {
+    display: flex;
+}
+
 .tile {
     background-color: #2c3034;
+    cursor: pointer;
     display: flex;
     flex-direction: column;
-    padding: 1em;
-    width: 20%;
+    max-width: 400px;
+    width: 20rem;
 }
 
 .tile:hover {
@@ -15,9 +36,18 @@
     background-color: #055160;
     display: flex;
     flex-direction: column;
+    height: 100%;
     padding: 1em;
 }
 
 .info h3 {
     text-decoration: underline;
+}
+
+.btn-primary.info-switch {
+    align-items: center
+}
+
+img {
+    width: 100%;
 }
