--- a/LibraryApp/Shared/TileHolder.razor.css
+++ b/LibraryApp/Shared/TileHolder.razor.css
@@ -1,7 +1,7 @@
 .holder {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    justify-content: center;
-    align-content: space-between;
+    flex-flow: wrap;
+    width: fit-content;
+    justify-content: space-around;
 }
