--- a/LibraryApp/Pages/FetchData.razor
+++ b/LibraryApp/Pages/FetchData.razor
@@ -1,6 +1,6 @@
-﻿@page "/fetchdata"
+﻿@page "/books"
 
-<PageTitle>Weather forecast</PageTitle>
+<PageTitle>Books</PageTitle>
 
 @using MongoDB.Driver
 @using LibraryApp.Data.Models
