--- a/LibraryApp/Shared/Article.razor
+++ b/LibraryApp/Shared/Article.razor
@@ -20,12 +20,23 @@
             }
             <span>@BookBind.Description</span>
         </div>
-        <div class="admin-bar admin-book">
-            <i class="material-symbols-outlined">visibility</i>
-            <i class="material-symbols-outlined">add</i>
-            <i class="material-symbols-outlined">remove</i>
-            <i class="material-symbols-outlined">delete</i>
-        </div>
+        @if (true)
+        {
+            <div class="admin-book">
+                <button class="btn-primary">
+                    <i class="material-icons md-18">visibility</i>
+                </button>
+                <button class="btn-primary">
+                    <i class="material-icons md-18">add</i>
+                </button>
+                <button class="btn-primary">
+                    <i class="material-icons md-18">remove</i>
+                </button>
+                <button class="btn-primary">
+                    <i class="material-icons md-18">delete</i>
+                </button>
+            </div>   
+        }
     </div>
     <div class="@_showingClass">
         
