--- a/LibraryApp/Shared/Article.razor.css
+++ b/LibraryApp/Shared/Article.razor.css
@@ -1,7 +1,7 @@
 .structural {
     display: flex;
     flex-direction: row;
-    height: 30rem;
+    height: fit-content;
     margin: 1em;
     padding: 1em;
 }
@@ -20,7 +20,6 @@
 
 .tile {
     background-color: #2c3034;
-    cursor: pointer;
     display: flex;
     flex-direction: column;
     max-width: 400px;
@@ -42,6 +41,15 @@
 
 .info h3 {
     text-decoration: underline;
+}
+
+.admin-book{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: .5rem;
+    background-color: #ffc107;
 }
 
 .btn-primary.info-switch {
