--- a/LibraryApp/wwwroot/css/site.css
+++ b/LibraryApp/wwwroot/css/site.css
@@ -15,7 +15,8 @@ a, .btn-link {
 }
 
 .btn-primary {
-    color: #fff;
+    color: #fff;    
+    cursor: pointer;
     background-color: #1861ac;
     border-radius: 10%;
     width: fit-content;
@@ -35,6 +36,14 @@ a, .btn-link {
 
 .validation-message {
     color: red;
+}
+
+i {
+    vertical-align: middle;
+}
+
+.md-18 {
+    font-size: 18px;
 }
 
 #blazor-error-ui {
