Authentication + pages/navigation cleanup

--- a/LibraryApp/Pages/Books.razor
+++ b/LibraryApp/Pages/Books.razor
@@ -4,7 +4,7 @@
 
 @using MongoDB.Driver
 @using LibraryApp.Data.Models
-@inject MongoClient DBClient
+@inject MongoClient DbClient
 
 <h1>Výpis knih</h1>
 
@@ -26,7 +26,7 @@ else
 
     protected override async Task<bool> OnInitializedAsync()
     {
-        var db = DBClient.GetDatabase("library");
+        var db = DbClient.GetDatabase("library");
         var col = db.GetCollection<Book>(nameof(Book));
         _books = await col.FindAsync(x => true).Result.ToListAsync();
         return true;
