--- a/LibraryApp/Pages/Index.razor
+++ b/LibraryApp/Pages/Index.razor
@@ -2,8 +2,13 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome to the Library</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?"/>
+<AuthorizeView>
+    <Authorized>
+        <h2>Hello, @context.User.Identity?.Name</h2>
+    </Authorized>
+    <NotAuthorized>
+        <h2>Hello, visitor.</h2>
+    </NotAuthorized>
+</AuthorizeView>
