Layout cleanup + gitignore update

--- a/LibraryApp/Pages/_Layout.cshtml
+++ b/LibraryApp/Pages/_Layout.cshtml
@@ -8,6 +8,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="~/"/>
+    <title>Library</title>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
     <link href="css/site.css" rel="stylesheet"/>
     <link href="LibraryApp.styles.css" rel="stylesheet"/>
