--- a/LibraryApp/Shared/LoginDisplay.razor
+++ b/LibraryApp/Shared/LoginDisplay.razor
@@ -4,10 +4,11 @@
 
 <AuthorizeView>
     <Authorized>
-        <a href="">@context.User.Identity?.Name</a>
+        <NavLink class="nav-link" href="account">Account: @context.User.Identity?.Name</NavLink>
         <NavLink class="nav-link" @onclick="Logout" style="cursor: pointer">Logout</NavLink>
     </Authorized>
     <NotAuthorized>
+        <NavLink class="nav-link" href="register">Register</NavLink>
         <NavLink class="nav-link" href="login">Login</NavLink>
     </NotAuthorized>
 </AuthorizeView>
