--- a/LibraryApp/Shared/LoginDisplay.razor
+++ b/LibraryApp/Shared/LoginDisplay.razor
@@ -1,4 +1,4 @@
-﻿@using LibraryApp.Areas.Identity
+﻿@using LibraryApp.Identity
 @inject AuthenticationStateProvider AuthStateProvider;
 @inject NavigationManager NavigationManager;
 
