--- a/LibraryApp/Shared/Article.razor
+++ b/LibraryApp/Shared/Article.razor
@@ -14,13 +14,11 @@
                 </button>
             </div>
             <span>@BookBind.Released.Year.ToString()</span>
-            @foreach (var author in BookBind.Authors)
-            {
-                <span class="oi oi-pencil me-2" aria-hidden="true">@author</span>
-            }
+            <span class="oi oi-pencil me-2" aria-hidden="true">@BookBind.Author.Name</span>
             <span>@BookBind.Description</span>
+            <span>Copies available: @BookBind.Copies.ToString()</span>
         </div>
-        <AuthorizeView>
+        <AuthorizeView Roles="Admin">
             <Authorized>
                 <div class="admin-book">
                     <button class="btn-primary">
