Small retakes + custom search attribute

--- a/LibraryApp/Pages/Books.razor
+++ b/LibraryApp/Pages/Books.razor
@@ -16,7 +16,7 @@
     <button class="btn-primary" @onclick="Search">Search</button>
 </div>
 
-@if (_books == null)
+@if (_books == null) // TODO <loadable> component
 {
     <p>
         <em>Loading...</em>
