Generic Search on ISearchable implementations

--- a/LibraryApp/Pages/Books.razor
+++ b/LibraryApp/Pages/Books.razor
@@ -37,7 +37,7 @@ else
     {
         if (SearchInput?.Length > 2)
         {
-            _books = MongoRepository.FilterBy(Book.SearchFilter(SearchInput));
+            _books = MongoRepository.SearchFor(SearchInput);
         }                                                                                 
         await Task.Run(() => null);
     }
