--- a/LibraryApp/Shared/MainLayout.razor
+++ b/LibraryApp/Shared/MainLayout.razor
@@ -3,6 +3,10 @@
 <PageTitle>LibraryApp</PageTitle>
 
 <div class="page">
+    <RadzenDialog></RadzenDialog>
+    <RadzenNotification></RadzenNotification>
+    <RadzenContextMenu></RadzenContextMenu>
+    <RadzenTooltip></RadzenTooltip>
     <div class="sidebar">
         <NavMenu/>
     </div>
