--- a/LibraryApp/Shared/LoginDisplay.razor
+++ b/LibraryApp/Shared/LoginDisplay.razor
@@ -5,7 +5,7 @@
 <AuthorizeView>
     <Authorized>
         <NavLink class="nav-link" href="account">Account: @context.User.Identity?.Name</NavLink>
-        <NavLink class="nav-link" href="">Notifications</NavLink>
+        <NavLink class="nav-link" href="notifications">Notifications</NavLink>
         <NavLink class="nav-link" @onclick="Logout" style="cursor: pointer">Logout</NavLink>
     </Authorized>
     <NotAuthorized>
@@ -14,13 +14,12 @@
     </NotAuthorized>
 </AuthorizeView>
 
-@code{
+@code {
 
     private async Task Logout()
     {
-        var libAuthStateProvider = (LibAuthenticationStateProvider) AuthStateProvider;
+        var libAuthStateProvider = (LibAuthenticationStateProvider)AuthStateProvider;
         await libAuthStateProvider.UpdateAuthenticationState(null);
         NavigationManager.NavigateTo("/");
     }
-
 }
