--- a/LibraryApp/Shared/ModelDetails/BookDetail.razor
+++ b/LibraryApp/Shared/ModelDetails/BookDetail.razor
@@ -125,22 +125,31 @@ else
         <div class="row">
             <div class="col-md-12">
                 <RadzenFieldset Text="Book Pictures">
-                    <RadzenCard>
-                        <h4 class="mb-4">Front: </h4>
-                        <RadzenFileInput @bind-Value="ImageFront.Data" TValue="string" class="w-100" />
-                    </RadzenCard>
-                    <RadzenCard>
-                        <h4 class="mb-4">Back: </h4>
-                        <RadzenFileInput @bind-Value="ImageCover.Data" TValue="string" class="w-100" />
-                    </RadzenCard>
-                    <RadzenText>@ProgressInfo</RadzenText>
+                    <AuthorizeView Roles="Admin" Context="identityState">
+                        <Authorized>
+                            <RadzenCard>
+                                <h4 class="mb-4">Front: </h4>
+                                <RadzenFileInput @bind-Value="ImageFront.Data" TValue="string" class="w-100" />
+                            </RadzenCard>
+                            <RadzenCard>
+                                <h4 class="mb-4">Back: </h4>
+                                <RadzenFileInput @bind-Value="ImageCover.Data" TValue="string" class="w-100" />
+                            </RadzenCard>
+                        </Authorized>
+                        <NotAuthorized>
+                            <img class="image" src="@ImageFront.Data" />
+                            <img class="image" src="@ImageCover.Data" />
+                        </NotAuthorized>
+                    </AuthorizeView>
                 </RadzenFieldset>
             </div>
         </div>
         <!-- Author Info -->
         <div class="row justify-content-center">
             <div class="col-md-12 d-flex align-items-end justify-content-center" style="margin-top: 16px;">
-                <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Save"/>
+                <AuthorizeView Roles="Admin" Context="identityState">
+                    <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Save"/>
+                </AuthorizeView>
                 <RadzenButton ButtonStyle="ButtonStyle.Light" Icon="cancel" style="display: inline-block; margin-left: 10px;" Text="Cancel" Click="@Cancel"/>
             </div>
         </div>
